--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -92,7 +92,7 @@ Science and Technology, Tsinghua University
 
 \section*{Research Statement}
 
-I am a fourth-year PhD candidate in UIUC, majoring in operations research. I have a special interest in the mechanism design for blockchain and decentralized AI, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~ on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, for a general scope of reliability and social sustainability in AI and digital economy, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
+I am a fourth-year PhD candidate in UIUC, majoring in operations research. I have a special interest in the mechanism design for blockchain and decentralized AI, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~\footnote{Paper tagged with \textcolor[rgb]{0.5,0.5,1}{{\tt[i*]}} are motivated with higher standards of conceptual innovations and longer-term societal values.} on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, for a general scope of reliability and social sustainability in AI and digital economy, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
 
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
@@ -118,22 +118,6 @@ Embodied AI~\EAI.
 
 \section*{Selected Papers}
 
-
-\paper{Proof-of-Learning with Incentive Security} \iDM~\M4A~\SUS~\href{https://arxiv.org/abs/2404.09005}{[Link]}
-
-\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou.
-
-\emph{In Submission (2024).}
-
-Invited to \emph{INFORMS Conference on Security (IConS'24)}.
-
-\emph{ACM EC Workshop on Foundation Models and Game Theory (ACM EC FMGT'24).}
-
-A preliminary version presented on \emph{INFORMS Annual Meeting 2023}. 
-
-\medskip{}
-
-
 \paper{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
 \M4A~\href{https://arxiv.org/abs/2209.13099}{[Link]}
 
@@ -154,6 +138,24 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
 
+\paper{Proof-of-Learning with Incentive Security} \iDM~\M4A~\SUS~\href{https://arxiv.org/abs/2404.09005}{[Link]}
+
+\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou.
+
+\emph{In Submission (2024).}
+
+Invited to \emph{INFORMS Conference on Security (IConS'24)}.
+
+\emph{ACM EC Workshop on Foundation Models and Game Theory (ACM EC FMGT'24).}
+
+A preliminary version presented on \emph{INFORMS Annual Meeting 2023}. 
+
+\medskip{}
+
+
+
+
+\newpage
 
 \paper{It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma} \iDM~\M4A~\href{https://arxiv.org/abs/2406.01794}{[Link]}
 
@@ -163,7 +165,7 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
-\newpage
+
 
 \section*{Other Papers}
 
