--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -92,7 +92,7 @@ Science and Technology, Tsinghua University
 
 \section*{Research Statement}
 
-I am a fourth-year PhD candidate in UIUC, majoring in operations research. I have a special interest in the mechanism design for blockchain and decentralized AI, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~\footnote{Paper tagged with \textcolor[rgb]{0.5,0.5,1}{{\tt[i*]}} are motivated with higher standards of conceptual innovations and longer-term societal values.} on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, for a general scope of reliability and social sustainability in AI and digital economy, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
+I am a fourth-year PhD candidate in UIUC, majoring in operations research. I have a special interest in the mechanism design for blockchain and decentralized AI, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~\footnote{Papers tagged with \textcolor[rgb]{0.5,0.5,1}{{\tt[i*]}} are motivated with higher standards of conceptual innovations and longer-term societal values.} on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, for a general scope of reliability and social sustainability in AI and digital economy, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
 
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
