--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -140,9 +140,9 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \paper{Proof-of-Learning with Incentive Security} \iDM~\M4A~\SUS~\href{https://arxiv.org/abs/2404.09005}{[Link]}
 
-\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou.
+\uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Hongxu Su, Haibo Xiao, Yuan Zhou.
 
-\emph{In Submission (2024).}
+\emph{In Submission (2025).}
 
 Invited to \emph{INFORMS Conference on Security (IConS'24)}.
 
@@ -161,7 +161,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 
 \uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
 
-\emph{Working Paper (2024). Improved results are available compared to the Arxiv version. \href{https://wiku30.xyz/2024/VeriPP/draft.pdf}{[Draft]}}
+\emph{Working Paper (2025). Improved results are available compared to the Arxiv version. \href{https://wiku30.xyz/2024/VeriPP/draft.pdf}{[Draft]}}
 
 Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
