--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -264,6 +264,12 @@ Tsinghua University, 2016.
 Tsinghua University in 2021.
 \end{itemize}
 
+\subsection*{Teaching}
+\begin{itemize}
+    \item Causal \& Statistical Inference, Fall 2018, Teaching Assistant, Tsinghua University.
+\end{itemize}
+
+
 \subsection*{Conference Reviewing}
 
 \begin{itemize}
