--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -119,12 +119,12 @@ Embodied AI~\EAI.
 \section*{Selected Papers}
 
 \paper{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
-\M4A~\href{https://arxiv.org/abs/2209.13099}{[Link]}
+\M4A~\href{https://pubsonline.informs.org/doi/full/10.1287/opre.2024.0865}{[Link]}
 
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
 
-\textcolor{blue}{\emph{Operations Research}} (2025, forthcoming).
+\textcolor{blue}{\emph{Operations Research}} (2025).
 
 \textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}, \emph{
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
@@ -318,6 +318,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Dec 19, 2024)}
+\emph{(Updated on Feb 3, 2025)}
 \par\end{flushright}
 \end{document}
