--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -161,7 +161,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 
 \uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
 
-\emph{Working Paper (2025). Improved results are available compared to the Arxiv version. \href{https://wiku30.xyz/2024/VeriPP/draft.pdf}{[Draft]}}
+\emph{Working Paper (2025).}
 
 Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
