--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -161,7 +161,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 
 \uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
 
-\emph{Working Paper (2025).}
+\emph{In Submission (2025).}
 
 Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
