--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -206,7 +206,7 @@ Hu.
 
 \section*{Tentative Projects}
 
-\paper{Online Peer Prediction (for LLM Alignment)} \A4M~\M4A
+\paper{Adaptive Peer Prediction for Truthful Feedback Elicitation} \A4M~\M4A
 
 with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
