--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -90,36 +90,21 @@ Advisor: Shi-Min Hu
 Science and Technology, Tsinghua University 
 \end{itemize}
 
-\section*{Research Statement}
+\section*{Research Interest}
 
-I am a fourth-year PhD candidate in UIUC, majoring in operations research. I have a special interest in the mechanism design for blockchain and decentralized AI, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream} \iDM~\footnote{Papers tagged with \textcolor[rgb]{0.5,0.5,1}{{\tt[i*]}} are motivated with higher standards of conceptual innovations and longer-term societal values.} on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, for a general scope of reliability and social sustainability in AI and digital economy, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
+I am a fifth-year PhD candidate in UIUC, majoring in operations research. My general research interest lies in the incentive design for digital economy and AI platforms, with applications in both centralized and decentralized platforms.
+
+I have a special interest in the mechanism design for blockchain and decentralized AI, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream}~\iDM on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
 
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
 to prevent dishonest behavior of \emph{untrusted but rational} parties.
 
-My current research topics span the following:
-
-\begin{itemize}
-    \item \textbf{AI for mechanism design~\A4M}: e.g., using data-driven methods to 
-    improve the performance of economic platforms.
-    \item \textbf{Mechanism design for AI~\M4A}: e.g., using economic incentives to 
-    reinforce the efficiency and reliability of AI systems, especially on decentralized platforms.
-    \item \textbf{Sustainability in AI \& Economy~\SUS}: e.g., using interdisciplinary
-    methodologies to foster long-term social welfare and environmental friendliness
-    for new-era AI and economic platforms. 
-\end{itemize}
-
-Additionally, I was interested in geometry-based computer vision (Visual SLAM in particular) at
-my undergraduate times. Although I no longer focus on that research field, I am
-still happy to discuss about related topics, especially the recently fruitful field of
-Embodied AI~\EAI.
-
 
 \section*{Selected Papers}
 
 \paper{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
-\M4A~\href{https://pubsonline.informs.org/doi/full/10.1287/opre.2024.0865}{[Link]}
+\href{https://pubsonline.informs.org/doi/full/10.1287/opre.2024.0865}{[Link]}
 
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
@@ -138,7 +123,7 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
 
-\paper{Proof-of-Learning with Incentive Security} \iDM~\M4A~\SUS~\href{https://arxiv.org/abs/2404.09005}{[Link]}
+\paper{Proof-of-Learning with Incentive Security} \iDM~\href{https://arxiv.org/abs/2404.09005}{[Link]}
 
 \uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Hongxu Su, Haibo Xiao, Yuan Zhou.
 
@@ -155,9 +140,9 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 
 
 
-\newpage
+%\newpage
 
-\paper{It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma} \iDM~\M4A~\href{https://arxiv.org/abs/2406.01794}{[Link]}
+\paper{It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma} \iDM~\href{https://arxiv.org/abs/2406.01794}{[Link]}
 
 \uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
 
@@ -169,7 +154,7 @@ Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
 \section*{Other Papers}
 
-\paper{Personalized Pricing with Group Fairness Constraint} \A4M~\SUS~\href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
+\paper{Personalized Pricing with Group Fairness Constraint} \href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
 
 Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 (alphabetical order)
@@ -178,10 +163,10 @@ Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 (ACM FAccT 2023)}
 
 \medskip{}
-
+\newpage
 
 \paper{Dynamic Car Dispatching and Pricing: Revenue and Fairness
-for Ridesharing Platforms } \A4M~\SUS~\href{https://arxiv.org/abs/2207.06318}{[Link]}
+for Ridesharing Platforms } \href{https://arxiv.org/abs/2207.06318}{[Link]}
 
 \uline{Zishuo Zhao}, Xi Chen, Xuefeng Zhang, Yuan Zhou
 
@@ -195,7 +180,7 @@ Invited to \emph{INFORMS Annual Meeting 2021}.
 
 
 \paper{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
-and Motion Estimation} \EAI~\href{https://link.springer.com/article/10.1007/s41095-020-0195-3}{[Link]}
+and Motion Estimation} \href{https://link.springer.com/article/10.1007/s41095-020-0195-3}{[Link]}
 
 Jiahui Huang, Sheng Yang, \uline{Zishuo Zhao}, Yukun Lai, Shi-Min
 Hu.
@@ -318,6 +303,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Feb 3, 2025)}
+\emph{(Updated on Feb 23, 2025)}
 \par\end{flushright}
 \end{document}
