--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -73,7 +73,7 @@ University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
 Expected Graduation: 2026 (depending on my research progress)\\
-Tentative Thesis Title: \emph{Economics for Reliable Decentralization and Trustworthy AI} 
+Tentative Thesis Title: \emph{Incentive Design for Digital Economy and AI Platforms} 
 \item \textbf{2023/09 - 2024/08} Visiting Student, Institute for Data Systems and Society (IDSS), \\
 Massachusetts Institute of Technology\\
 Research Topic: Data-Driven Dynamic Mechanism Design\\
