--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -249,17 +249,20 @@ Tsinghua University, 2016.
 Tsinghua University in 2021.
 \end{itemize}
 
+\subsection*{Conference \& Journal Reviewing}
+
+\begin{itemize}
+    \item Conference Reviewing: ESA (2024)
+    \item Journal Reviewing: Operations Research (2025)
+\end{itemize}
+
 \subsection*{Teaching}
 \begin{itemize}
     \item Causal \& Statistical Inference, Fall 2018, Teaching Assistant, Tsinghua University.
 \end{itemize}
 
 
-\subsection*{Conference Reviewing}
 
-\begin{itemize}
-    \item ESA 2024
-\end{itemize}
 
 \subsection*{Advising}
 
@@ -303,6 +306,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Feb 23, 2025)}
+\emph{(Updated on Mar 15, 2025)}
 \par\end{flushright}
 \end{document}
