--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -94,7 +94,7 @@ Science and Technology, Tsinghua University
 
 I am a fifth-year PhD candidate in UIUC, majoring in operations research. My general research interest lies in the incentive design for digital economy and AI platforms, with applications in both centralized and decentralized platforms.
 
-I have a special interest in the mechanism design for blockchain and decentralized AI, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream}~\iDM on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
+I have a special interest in the mechanism design for blockchain and decentralized economics, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream}~\iDM on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
 
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
@@ -191,7 +191,7 @@ Hu.
 
 \section*{Tentative Projects}
 
-\paper{Adaptive Peer Prediction for Truthful Feedback Elicitation} \A4M~\M4A
+\paper{Adaptive Peer Prediction for Truthful Feedback Elicitation} %\A4M~\M4A
 
 with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
@@ -269,7 +269,7 @@ Tsinghua University in 2021.
 \begin{itemize}
     \item Haibo Xiao (Undergraduate at Tsinghua University)
     \item Hongxu Su (PhD student at HKUST(GZ) )
-    \item Qiushi Han (Undergraduate at UIUC, visiting MIT)
+    \item Qiushi Han (Undergraduate at UIUC. Next step: MIT ORC PhD)
     \item Renfei Tan (PhD student at MIT)
 \end{itemize}
 
@@ -300,12 +300,12 @@ Java, PHP.
 %\subsection*{Others}
 
 %\begin{itemize}
-%    \item My life philosophy is \emph{Andante Cantabile}.
+%    \item My life philosophy is ``君子豹变，其文蔚也'', from 《周易》\emph{(The Book of Changes)}.
 %    \item I play some video games with the game ID \emph{Ai no Hime}, which simultaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
 %\end{itemize}
 
 
 \begin{flushright}
-\emph{(Updated on Mar 15, 2025)}
+\emph{(Updated on Apr 30, 2025)}
 \par\end{flushright}
 \end{document}
