--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -267,7 +267,7 @@ Tsinghua University in 2021.
 \subsection*{Advising}
 
 \begin{itemize}
-    \item Haibo Xiao (Undergraduate at Tsinghua University)
+    \item Haibo Xiao (Undergraduate at Tsinghua University. Next step: Tsinghua PhD)
     \item Hongxu Su (PhD student at HKUST(GZ) )
     \item Qiushi Han (Undergraduate at UIUC. Next step: MIT ORC PhD)
     \item Renfei Tan (PhD student at MIT)
