--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -191,7 +191,7 @@ Hu.
 
 \section*{Tentative Projects}
 
-\paper{Adaptive Peer Prediction for Truthful Feedback Elicitation} %\A4M~\M4A
+\paper{Online Mechanism Design in Crowdsourcing Systems} %\A4M~\M4A
 
 with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
