--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -63,6 +63,8 @@
 
 \begin{center}
 PhD Candidate, ISE, University of Illinois Urbana-Champaign
+
+\emph{(he/him/his, they/them/their)}
 \par\end{center}
 
 \section*{Background}
@@ -297,12 +299,13 @@ Java, PHP.
 %Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
 
-%\subsection*{Others}
+\subsection*{Others}
 
-%\begin{itemize}
-%    \item My life philosophy is ``君子豹变，其文蔚也'', from 《周易》\emph{(The Book of Changes)}.
-%    \item I play some video games with the game ID \emph{Ai no Hime}, which simultaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
-%\end{itemize}
+\begin{itemize}
+    \item My life philosophy is ``君子豹变，其文蔚也'', from 《周易》\emph{(The Book of Changes)}.
+    \item I play some video games with the game ID \emph{Ai no Hime}, which simuitaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
+    \item I use both pronouns of \emph{he/him/his} and \emph{they/them/their}. I \emph{slightly} prefer the latter for a stereotype-free self-identity; however, I am also fully comfortable with the former as in a traditional way.
+\end{itemize}
 
 
 \begin{flushright}
