--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -302,8 +302,7 @@ Java, PHP.
 \subsection*{Others}
 
 \begin{itemize}
-    \item My life philosophy is ``君子豹变，其文蔚也'', from 《周易》\emph{(The Book of Changes)}.
-    \item I play some video games with the game ID \emph{Ai no Hime}, which simuitaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
+    \item My life motto is ``\emph{Continuer \`a t'aimer; Continuer de peindre.}''
     \item I use both pronouns of \emph{he/him/his} and \emph{they/them/their}. I \emph{slightly} prefer the latter for a stereotype-free self-identity; however, I am also fully comfortable with the former in traditional usage as I am gender-conforming.
 \end{itemize}
 
