--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -69,7 +69,7 @@ PhD Candidate, ISE, University of Illinois Urbana-Champaign
 
 \section*{Background}
 \begin{itemize}
-\item \textbf{2021/01 - now }PhD Candidate, Department of Industrial \& Enterprise
+\item \textbf{2021/01 - now }PhD Candidate (ABD), Department of Industrial \& Enterprise
 Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
@@ -302,8 +302,9 @@ Java, PHP.
 \subsection*{Others}
 
 \begin{itemize}
-    \item My life motto is ``\emph{Continuer \`a t'aimer; Continuer de peindre.}''
-    \item I use both pronouns of \emph{he/him/his} and \emph{they/them/their}. I \emph{slightly} prefer the latter for a stereotype-free self-identity; however, I am also fully comfortable with the former in traditional usage as I am gender-conforming.
+    \item My life philosophy is ``君子豹变，其文蔚也'', from 《周易》\emph{(The Book of Changes)}.
+    \item I play some video games with the game ID \emph{Ai no Hime}, which simuitaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
+    \item I use both pronouns of \emph{he/him/his} and \emph{they/them/their}. I \emph{slightly} prefer the latter for a stereotype-free self-cognition; however, I am also fully comfortable with the former in traditional usage as I am gender-conforming.
 \end{itemize}
 
 
