--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -53,19 +53,21 @@
 \title{Zishuo Zhao 赵梓硕}
 \maketitle
 
-\vspace{-5em}
+%\vspace{-5em}
 
 \begin{center}
 \texttt{zishuoz2@illinois.edu, wiku30.xyz}
 \par\end{center}
 
-\vspace{-1.7em}
+%\vspace{-1.7em}
 
 \begin{center}
-PhD Candidate, ISE, University of Illinois Urbana-Champaign
+PhD Candidate (ABD), ISE, University of Illinois Urbana-Champaign
 
-\emph{(he/him/his, they/them/their)}
+%\emph{(he/him/his, they/them/their)}
 \par\end{center}
+
+\vspace{3em}
 
 \section*{Background}
 \begin{itemize}
@@ -92,6 +94,7 @@ Advisor: Shi-Min Hu
 Science and Technology, Tsinghua University 
 \end{itemize}
 
+\iffalse
 \section*{Research Interest}
 
 I am a fifth-year PhD candidate in UIUC, majoring in operations research. My general research interest lies in the incentive design for digital economy and AI platforms, with applications in both centralized and decentralized platforms.
@@ -101,8 +104,9 @@ I have a special interest in the mechanism design for blockchain and decentraliz
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
 to prevent dishonest behavior of \emph{untrusted but rational} parties.
+\fi
 
-
+\newpage
 \section*{Selected Papers}
 
 \paper{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
@@ -125,7 +129,7 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
 
-\paper{Proof-of-Learning with Incentive Security} \iDM~\href{https://arxiv.org/abs/2404.09005}{[Link]}
+\paper{Proof-of-Learning with Incentive Security} \href{https://arxiv.org/abs/2404.09005}{[Link]}
 
 \uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Hongxu Su, Haibo Xiao, Yuan Zhou.
 
@@ -144,7 +148,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 
 %\newpage
 
-\paper{It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma} \iDM~\href{https://arxiv.org/abs/2406.01794}{[Link]}
+\paper{It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma} \href{https://arxiv.org/abs/2406.01794}{[Link]}
 
 \uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
 
@@ -165,7 +169,6 @@ Xin Chen{*}, Zexing Xu{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}.
 (ACM FAccT 2023)}
 
 \medskip{}
-\newpage
 
 \paper{Dynamic Car Dispatching and Pricing: Revenue and Fairness
 for Ridesharing Platforms } \href{https://arxiv.org/abs/2207.06318}{[Link]}
@@ -180,7 +183,6 @@ Invited to \emph{INFORMS Annual Meeting 2021}.
 \medskip{}
 
 
-
 \paper{ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering
 and Motion Estimation} \href{https://link.springer.com/article/10.1007/s41095-020-0195-3}{[Link]}
 
@@ -191,7 +193,7 @@ Hu.
 
 \emph{International Conference on Computer Vision (ICCV 2019). }
 
-\section*{Tentative Projects}
+\section*{Working Projects}
 
 \paper{Online Mechanism Design in Crowdsourcing Systems} %\A4M~\M4A
 
@@ -258,14 +260,6 @@ Tsinghua University in 2021.
     \item Journal Reviewing: Operations Research (2025)
 \end{itemize}
 
-\subsection*{Teaching}
-\begin{itemize}
-    \item Causal \& Statistical Inference, Fall 2018, Teaching Assistant, Tsinghua University.
-\end{itemize}
-
-
-
-
 \subsection*{Advising}
 
 \begin{itemize}
@@ -274,6 +268,13 @@ Tsinghua University in 2021.
     \item Qiushi Han (Undergraduate at UIUC. Next step: MIT ORC PhD)
     \item Renfei Tan (PhD student at MIT)
 \end{itemize}
+
+\subsection*{Teaching}
+\begin{itemize}
+    \item Teaching Assistant, Causal \& Statistical Inference, Fall 2018, Tsinghua University.
+    \item Discussion Session, Calculus, Fall 2015, Tsinghua University.
+\end{itemize}
+
 
 \section*{Miscellaneous}
 
@@ -299,13 +300,15 @@ Java, PHP.
 %Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
 
+\iffalse
 \subsection*{Others}
 
 \begin{itemize}
-    \item My life philosophy is ``君子豹变，其文蔚也'', from 《周易》\emph{(The Book of Changes)}.
+    %\item My life philosophy is ``君子豹变，其文蔚也'', from 《周易》\emph{(The Book of Changes)}.
     \item I play some video games with the game ID \emph{Ai no Hime}, which simuitaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
     \item I use both pronouns of \emph{he/him/his} and \emph{they/them/their}. I \emph{slightly} prefer the latter for a stereotype-free self-cognition; however, I am also fully comfortable with the former in traditional usage as I am gender-conforming.
 \end{itemize}
+\fi
 
 
 \begin{flushright}
