--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -115,7 +115,7 @@ to prevent dishonest behavior of \emph{untrusted but rational} parties.
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
 Zhou{*}. (alphabetical order)
 
-\textcolor{blue}{\emph{Operations Research}} (2025).
+\textcolor{blue}{\emph{Operations Research}}, 73(4), 1944-1964, 2025.
 
 \textcolor{blue}{\href{https://ai-secure.github.io/DMLW2022/papers}{Best Paper Award}}, \emph{
 NeurIPS Workshop on Decentralization and Trustworthy Machine Learning
