--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -71,6 +71,8 @@ PhD Candidate (ABD), ISE, University of Illinois Urbana-Champaign
 
 \section*{Background}
 \begin{itemize}
+\item \textbf{2025/07 - now }Research Intern, Gradient Network \href{https://gradient.network/}{[Website]}\\
+Research Topic: Incentive \& protocol design of decentralized AI systems.
 \item \textbf{2021/01 - now }PhD Candidate (ABD), Department of Industrial \& Enterprise
 Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
@@ -312,6 +314,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Apr 30, 2025)}
+\emph{(Updated on Jul 27, 2025)}
 \par\end{flushright}
 \end{document}
