--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -64,10 +64,10 @@
 \begin{center}
 PhD Candidate (ABD), ISE, University of Illinois Urbana-Champaign
 
-%\emph{(he/him/his, they/them/their)}
+\emph{(they/them/their, he/him/his)}
 \par\end{center}
 
-\vspace{3em}
+%\vspace{2em}
 
 \section*{Background}
 \begin{itemize}
