--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -64,7 +64,7 @@
 \begin{center}
 PhD Candidate (ABD), ISE, University of Illinois Urbana-Champaign
 
-\emph{(they/them/their, he/him/his)}
+\emph{(they/them/theirs, he/him/his)}
 \par\end{center}
 
 %\vspace{2em}
