--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -78,7 +78,7 @@ Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Expected Graduation: 2026 (depending on my research progress)\\
+Expected Graduation: 2026\\
 Tentative Thesis Title: \emph{Incentive Design for Digital Economy and AI Platforms} 
 \item \textbf{2023/09 - 2024/08} Visiting Student, Institute for Data Systems and Society (IDSS), \\
 Massachusetts Institute of Technology\\
@@ -262,13 +262,13 @@ Tsinghua University in 2021.
     \item Journal Reviewing: Operations Research (2025)
 \end{itemize}
 
-\subsection*{Advising}
+\subsection*{Mentoring}
 
 \begin{itemize}
+    \item Renfei Tan (PhD student at MIT)
+    \item Qiushi Han (Undergraduate at UIUC. Next step: MIT ORC PhD)
     \item Haibo Xiao (Undergraduate at Tsinghua University. Next step: Tsinghua PhD)
     \item Hongxu Su (PhD student at HKUST(GZ) )
-    \item Qiushi Han (Undergraduate at UIUC. Next step: MIT ORC PhD)
-    \item Renfei Tan (PhD student at MIT)
 \end{itemize}
 
 \subsection*{Teaching}
@@ -298,7 +298,7 @@ Java, PHP.
 \subsection*{Extracurricular Activities}
 \begin{itemize}
 \item I have an amateur interest in Capture-The-Flag (CTF) cybersecurity competitions, and developed two Reverse challenges in the TQLCTF 2022.
-\item I have a wide scope of hobbies in arts and aerobic sports, especially in vocal music, photography, piano, table tennis and orienteering. 
+\item I have a wide scope of hobbies in arts and aerobic sports, especially in vocal music, photography, piano, calligraphy, table tennis and orienteering. 
 %Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
 
