--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -96,7 +96,7 @@ Advisor: Shi-Min Hu
 Science and Technology, Tsinghua University 
 \end{itemize}
 
-\iffalse
+
 \section*{Research Interest}
 
 I am a fifth-year PhD candidate in UIUC, majoring in operations research. My general research interest lies in the incentive design for digital economy and AI platforms, with applications in both centralized and decentralized platforms.
@@ -106,12 +106,12 @@ I have a special interest in the mechanism design for blockchain and decentraliz
 Particularly, I am recently interested in the exploration into a novel paradigm of \emph{incentive security}
 on blockchain and AI platforms, which aims to combine game-theoretic and systematic/cryptographic methodologies
 to prevent dishonest behavior of \emph{untrusted but rational} parties.
-\fi
 
-\newpage
+
+%\newpage
 \section*{Selected Papers}
 
-\paper{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
+\paper{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}~\iDM
 \href{https://pubsonline.informs.org/doi/full/10.1287/opre.2024.0865}{[Link]}
 
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
@@ -131,11 +131,24 @@ Invited to \emph{INFORMS Annual Meeting 2022}.
 
 \medskip{}
 
-\paper{Proof-of-Learning with Incentive Security} \href{https://arxiv.org/abs/2404.09005}{[Link]}
+\paper{It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma}~\iDM \href{https://arxiv.org/abs/2406.01794}{[Link]}
+
+\uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
+
+\emph{Under review in Operations Research (2025).}
+
+Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
+
+
+\medskip{}
+
+
+
+\paper{Proof-of-Learning with Incentive Security}~\iDM \href{https://arxiv.org/abs/2404.09005}{[Link]}
 
 \uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Hongxu Su, Haibo Xiao, Yuan Zhou.
 
-\emph{In Submission (2025).}
+\emph{In preparation for an extended version (2025).}
 
 Invited to \emph{INFORMS Conference on Security (IConS'24)}.
 
@@ -143,20 +156,6 @@ Invited to \emph{INFORMS Conference on Security (IConS'24)}.
 
 A preliminary version presented on \emph{INFORMS Annual Meeting 2023}. 
 
-\medskip{}
-
-
-
-
-%\newpage
-
-\paper{It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma} \href{https://arxiv.org/abs/2406.01794}{[Link]}
-
-\uline{Zishuo Zhao}, Xi Chen, Yuan Zhou.
-
-\emph{In Submission (2025).}
-
-Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
 
 
@@ -258,8 +257,8 @@ Tsinghua University in 2021.
 \subsection*{Conference \& Journal Reviewing}
 
 \begin{itemize}
-    \item Conference Reviewing: ESA (2024)
     \item Journal Reviewing: Operations Research (2025)
+    \item Conference Reviewing: ESA (2024)
 \end{itemize}
 
 \subsection*{Mentoring}
@@ -302,18 +301,17 @@ Java, PHP.
 %Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
 
-\iffalse
+
 \subsection*{Others}
 
 \begin{itemize}
-    %\item My life philosophy is ``君子豹变，其文蔚也'', from 《周易》\emph{(The Book of Changes)}.
-    \item I play some video games with the game ID \emph{Ai no Hime}, which simuitaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.
-    \item I use both pronouns of \emph{he/him/his} and \emph{they/them/their}. I \emph{slightly} prefer the latter for a stereotype-free self-cognition; however, I am also fully comfortable with the former in traditional usage as I am gender-conforming.
+    \item My motto is \emph{``Continuer \`a t'aimer, continuer de peindre.'' (``Keep on loving, keep on painting.'')}
+    \item I use both pronouns of \emph{they/them} and \emph{he/him/his}. I \emph{slightly} prefer the former for a stereotype-free self-cognition; however, I am also fully comfortable with the former in traditional usage as I am gender-conforming.
 \end{itemize}
-\fi
+
 
 
 \begin{flushright}
-\emph{(Updated on Jul 27, 2025)}
+\emph{(Updated on Sep 15, 2025)}
 \par\end{flushright}
 \end{document}
