--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -306,7 +306,7 @@ Java, PHP.
 
 \begin{itemize}
     \item My motto is \emph{``Continuer \`a t'aimer, continuer de peindre.'' (``Keep on loving, keep on painting.'')}
-    \item I use both pronouns of \emph{they/them} and \emph{he/him/his}. I \emph{slightly} prefer the former for a stereotype-free self-cognition; however, I am also fully comfortable with the former in traditional usage as I am gender-conforming.
+    \item I use both pronouns of \emph{they/them} and \emph{he/him/his}. I \emph{slightly} prefer the former for a stereotype-free self-cognition; however, I am also fully comfortable with the latter in traditional usage as I am gender-conforming.
 \end{itemize}
 
 
