--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -200,6 +200,12 @@ Hu.
 
 with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
+\medskip{}
+
+\paper{T'AIMER: Trustworthy AI Multi-round pEer veRification mechanism}~\iDM
+
+\emph{(Collaborators TBA)}
+
 
 
 %\textbf{Incentive-Aware Dynamic Auction for Budgeted Bidders} \A4M
@@ -302,16 +308,16 @@ Java, PHP.
 \end{itemize}
 
 
-\subsection*{Others}
+%\subsection*{Others}
 
-\begin{itemize}
-    \item My motto is \emph{``Continuer \`a t'aimer, continuer de peindre.'' (``Keep on loving, keep on painting.'')}
-    \item I use both pronouns of \emph{they/them} and \emph{he/him}. I \emph{slightly} prefer the former for a stereotype-free self-cognition; however, I am also fully comfortable with the latter in traditional usage as I am gender-conforming.
-\end{itemize}
+%\begin{itemize}
+%    \item My motto is \emph{``Continuer \`a t'aimer, continuer de peindre.'' (``Keep on loving, keep on painting.'')}
+%    \item I use both pronouns of \emph{they/them} and \emph{he/him}. I \emph{slightly} prefer the former for a stereotype-free self-cognition; however, I am also fully comfortable with the latter in traditional usage as I am gender-conforming.
+%\end{itemize}
 
 
 
 \begin{flushright}
-\emph{(Updated on Sep 15, 2025)}
+\emph{(Updated on Sep 18, 2025)}
 \par\end{flushright}
 \end{document}
