--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -143,7 +143,6 @@ Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 \medskip{}
 
 
-
 \paper{Proof-of-Learning with Incentive Security}~\iDM \href{https://arxiv.org/abs/2404.09005}{[Link]}
 
 \uline{Zishuo Zhao}, Zhixuan Fang, Xuechao Wang, Xi Chen, Hongxu Su, Haibo Xiao, Yuan Zhou.
@@ -196,28 +195,21 @@ Hu.
 
 \section*{Working Projects}
 
+\paper{T'AIMER: Trustworthy AI Multi-round pEer veRification mechanism}~\iDM
+
+\emph{(Collaborators TBA)}
+
+\medskip{}
+
 \paper{Online Mechanism Design in Crowdsourcing Systems} %\A4M~\M4A
 
 with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
 \medskip{}
 
-\paper{T'AIMER: Trustworthy AI Multi-round pEer veRification mechanism}~\iDM
+\paper{VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference}
 
-\emph{(Collaborators TBA)}
-
-
-
-%\textbf{Incentive-Aware Dynamic Auction for Budgeted Bidders} \A4M
-
-%David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan Zhou{*}. (alphabetical order)
-
-
-
-
-
-
-
+with Gradient Network
 
 \section*{Awards}
 
@@ -304,20 +296,11 @@ Java, PHP.
 \begin{itemize}
 \item I have an amateur interest in Capture-The-Flag (CTF) cybersecurity competitions, and developed two Reverse challenges in the TQLCTF 2022.
 \item I have a wide scope of hobbies in arts and aerobic sports, especially in vocal music, photography, piano, calligraphy, table tennis and orienteering. 
-%Particularly, my photographs ``梦影(\textit{Dreamland Impression})'' and ``$2\pi i$'' won the Finalist Award in the photography exhibition for the 12th Anniversary of IIIS, Tsinghua University in 2023.
 \end{itemize}
-
-
-%\subsection*{Others}
-
-%\begin{itemize}
-%    \item My motto is \emph{``Continuer \`a t'aimer, continuer de peindre.'' (``Keep on loving, keep on painting.'')}
-%    \item I use both pronouns of \emph{they/them} and \emph{he/him}. I \emph{slightly} prefer the former for a stereotype-free self-cognition; however, I am also fully comfortable with the latter in traditional usage as I am gender-conforming.
-%\end{itemize}
 
 
 
 \begin{flushright}
-\emph{(Updated on Sep 18, 2025)}
+\emph{(Updated on Sep 28, 2025)}
 \par\end{flushright}
 \end{document}
