--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -111,7 +111,7 @@ to prevent dishonest behavior of \emph{untrusted but rational} parties.
 %\newpage
 \section*{Selected Papers}
 
-\paper{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}~\iDM
+\paper{Bayesian Mechanism Design for Blockchain Transaction Fee Allocation}
 \href{https://pubsonline.informs.org/doi/full/10.1287/opre.2024.0865}{[Link]}
 
 Xi Chen{*}, David Simchi-Levi{*}, \uline{Zishuo Zhao}{*}, Yuan
