--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -155,7 +155,11 @@ Invited to \emph{INFORMS Conference on Security (IConS'24)}.
 
 A preliminary version presented on \emph{INFORMS Annual Meeting 2023}. 
 
+\medskip{}
 
+\paper{VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference} \href{https://www.arxiv.org/abs/2509.24257}{[Link]}
+
+Ke Wang, Felix Qu, Libin Xia, \uline{Zishuo Zhao}, Chris Tong, Lynn Ai, Eric Yang
 
 
 \section*{Other Papers}
@@ -205,11 +209,6 @@ Hu.
 
 with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
-\medskip{}
-
-\paper{VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference}
-
-with Gradient Network
 
 \section*{Awards}
 
