--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -245,6 +245,7 @@ Tsinghua University, 2016.
 \subsection*{Academic Services}
 
 \begin{itemize}
+\item Invited to MIT DSL Seminar for the talk ``Decentralized AI: Economics of Trust'' in Oct 2025.
 \item Invited to OR Talk by 运筹OR帷幄 (OR China) for two talks in 2024. 
 \item Facilitator in section Revenue \& Pricing, INFORMS Annual Meeting, 2021.
 \item Invited to the Alumni Forum for the 10th Anniversary of IIIS,
@@ -300,6 +301,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Sep 28, 2025)}
+\emph{(Updated on Oct 22, 2025)}
 \par\end{flushright}
 \end{document}
