--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -159,7 +159,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 
 \paper{VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference} \href{https://www.arxiv.org/abs/2509.24257}{[Link]}
 
-Ke Wang, Felix Qu, Libin Xia, \uline{Zishuo Zhao}, Chris Tong, Lynn Ai, Eric Yang
+Ke Wang, \uline{Zishuo Zhao}, Xinyuan Song, Bill Shi, Libin Xia, Chris Tong, Lynn Ai, Felix Qu, Eric Yang
 
 
 \section*{Other Papers}
@@ -301,6 +301,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Oct 22, 2025)}
+\emph{(Updated on Oct 30, 2025)}
 \par\end{flushright}
 \end{document}
