--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -270,8 +270,9 @@ Tsinghua University in 2021.
 
 \subsection*{Teaching}
 \begin{itemize}
-    \item Teaching Assistant, Causal \& Statistical Inference, Fall 2018, Tsinghua University.
-    \item Discussion Session, Calculus, Fall 2015, Tsinghua University.
+    \item Guest lecture on decentralized AI, IE598 Foundations of Modern Machine Learning, UIUC, Fall 2025.
+    \item Teaching Assistant, Causal \& Statistical Inference, Tsinghua University, Fall 2018.
+    \item Discussion Session, Calculus, Tsinghua University, Fall 2015.
 \end{itemize}
 
 
@@ -301,6 +302,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Oct 30, 2025)}
+\emph{(Updated on Nov 14, 2025)}
 \par\end{flushright}
 \end{document}
